--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "next": "^15.1.4",
