--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "eventsource-parser": "^2.0.1",
     "firebase": "^11.1.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "use-immer": "^0.11.0",
-    "eventsource-parser": "^2.0.1"
+    "use-immer": "^0.11.0"
   },
   "scripts": {
     "dev": "bun run next dev",
