--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "@types/bun": "latest",
     "@types/react": "19.0.6",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.42",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.0"
   },
@@ -14,16 +14,22 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "dotenv": "^16.4.7",
     "eventsource-parser": "^2.0.1",
     "firebase": "^11.1.0",
     "init": "^0.1.2",
+    "input": "^1.0.1",
+    "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^2.5.0",
+    "tailwind-variants": "^1.0.0",
     "use-immer": "^0.11.0"
   },
   "scripts": {
