--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,18 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/typography": "^0.5.16",
     "add": "^2.0.6",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.7",
     "eventsource-parser": "^2.0.1",
     "firebase": "^11.1.0",
     "init": "^0.1.2",
     "input": "^1.0.1",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
