--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "shadcn": "^2.5.0",
+    "showdown": "^2.1.0",
     "tailwind-variants": "^1.0.0",
     "use-immer": "^0.11.0"
   },
